--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,26 @@
     "description": "This repository contains extra resources that complement the RedBeanPHP, a ORM layer that creates models, config and database on the fly.",
     "type": "library",
     "minimum-stability": "stable",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Arkadiusz Kawałko"
+        }
+    ],
     "require": {
         "hanneskod/classtools": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6"
     },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Arkadiusz Kawałko"
+    "autoload": {
+        "psr-4": {
+            "Akawalko\\RedbeanExtras\\": "src/"
         }
-    ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Akawalko\\RedbeanExtras\\Tests\\": "tests/"
+        }
+    }
 }
