--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "psr-4": {
             "Akawalko\\RedbeanExtras\\Tests\\": "tests/"
         }
+    },
+    "suggest": {
+        "gabordemooij/redbean": "ORM layer that creates models, config and database on the fly"
     }
 }
