--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "hanneskod/classtools": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "gabordemooij/redbean": "^5.7"
     },
     "autoload": {
         "psr-4": {
