--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     ],
     "require": {
         "php": ">=7.4",
-        "hanneskod/classtools": "^1.2"
+        "hanneskod/classtools": "^1.2",
+        "psr/cache": "^1.0",
+        "symfony/cache-contracts": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
-        "gabordemooij/redbean": "^5.7"
+        "gabordemooij/redbean": "^5.7",
+        "symfony/cache": "^5.4"
     },
     "autoload": {
         "psr-4": {
